# rt1050_freertos_hello

./: .gitmodules  CMakeLists.txt  MIMXRT1052xxxxB.mex
board/: clock_config.c  clock_config.h  dcd.c  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
components/FreeRTOS/: CMakeLists.txt
include/: FreeRTOSConfig.h  user_tasks.h
source/: main.c
source/tasks/: hello_task.c
